# mtg-nlp-project

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
app/: .dockerignore
app/src/: config.py  main.py
app/src/api/: search.py
db/: README.md  docker-compose.meilisearch.yml  docker-compose.storage.yml
db/meilisearch/: README.md  document_schema.json  domain_semantic_layer_document_schema.json  domain_semantic_layer_settings.json  index_settings.json
docs/contracts/: issue-1-contracts.md
docs/semantic-layer/: issue-01-base-contracts.md  issue-02-semantic-layer-builder.md  issue-03-rrf-fusion.md  issue-04-semantic-expansion.md  issue-05-quality-rollout.md  issue-06-storage-minio.md
etl/: README.md  logging_utils.py  paths.py  run_meilisearch_ingest.py  run_scryfall_etl.py  run_semantic_layer_build.py  storage.py
etl/meilisearch/: __init__.py  batching.py  client.py  embedding_profiles.py  models.py  pipeline.py  semantic_layer.py  vectorizer.py
etl/scryfall/: __init__.py  client.py  models.py  pipeline.py  transform.py
scripts/: 001__meilisearch-health.sh  002__meilisearch-search.sh  003__api-health.sh  004__api-search.sh  005__meilisearch-semantic-layer-stats.sh  006__meilisearch-semantic-layer-search.sh  007__meilisearch-semantic-layer-document.sh  008__api-search-hybrid.sh  009__api-search-rrf.sh  010__api-search-expansion-off.sh  011__api-search-expansion-on.sh  012__api-quality-benchmark.sh  013__api-rollout-simulation.sh  014__api-prod-target-check.sh  015__storage-paths-check.sh  016__minio-health.sh  017__storage-compose-check.sh
scripts/data/: issue5_eval_queries.tsv
(+7 files in other folders)
