[tool.poetry]
name = "mtg-nlp-app"
version = "0.1.0"
description = "FastAPI backend for AI Engineering"
authors = ["Gabriel Leal <marqsleal@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"

# Core API
fastapi = "^0.132.0"
uvicorn = { extras = ["standard"], version = "^0.41.0" }

# Streamlit
streamlit = "^1.54.0"

# Database ORM
sqlalchemy = "^2.0.40"
asyncpg = "^0.30.0"

# Migrations
alembic = "^1.18.0"

# Redis caching
redis = "^5.2.0"

# Vector databases & embeddings
pgvector = "^0.4.0"
qdrant-client = "^1.17.0"

# LLM integrations (modular)
# openai = "^1.20.0"
# anthropic = "^0.20.0"
# huggingface-hub = "^0.35.0"

# Observability
opentelemetry-api = "^1.39.0"
opentelemetry-sdk = "^1.39.0"
opentelemetry-exporter-otlp = "^1.39.0"
opentelemetry-instrumentation-fastapi = "^0.60b1"
opentelemetry-instrumentation-requests = "^0.60b1"
opentelemetry-instrumentation-httpx = "^0.60b1"
opentelemetry-instrumentation-logging = "^0.60b1"

# Config & validation
pydantic = "^2.12.0"
pydantic-settings = "^2.4.0"
python-dotenv = "^1.1.0"
psycopg2-binary = "^2.9.00"

# Security
# passlib = "^1.7.4"
# python-jose = "^3.5.0"

# Utilities
httpx = "^0.28.0"
pyarrow = "^21.0.0"
sentence-transformers = "^5.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.0"
pytest-asyncio = "^1.3.0"
ruff = "^0.15.0"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = []
fixable = ["ALL"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
